# snapcat

./: CHANGELOG.md  Cargo.toml  README.md  foo.md
.github/workflows/: changelog.yaml  release.yml
app/: snapcat.rs
config/: default.toml
src/: engine.rs  error.rs  lib.rs  options.rs  output.rs  tree.rs  types.rs
tests/: integration.rs  unit.rs
