[package]
name = "snapcat"
version = "0.1.0"
edition = "2024"
description = "Directory tree traversal and file content reading library with extensive configuration"
authors = ["neuxdotdev <neuxdev1@gmail.com>"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
logging = ["dep:tracing"]
streaming = []

[dependencies]
ignore = "0.4.25"
globset = "0.4"
content_inspector = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rayon = { version = "1.11", optional = true }
tracing = { version = "0.1", optional = true }
clap = { version = "4.5.58", features = ["derive"] }

[dev-dependencies]
tempfile = "3.25.0"
