[package]
name = "snapcat"
version = "0.2.5"
edition = "2024"
description = "High-performance directory tree traversal and file content extraction library with configurable filtering, binary detection, and streaming support."
authors = ["neuxdotdev <neuxdev1@gmail.com>"]

license = "AGPL-3.0-only"
license-file = "LICENSE"

repository = "https://github.com/neuxdotdev/snapcat"
homepage = "https://github.com/neuxdotdev/snapcat"
documentation = "https://docs.rs/snapcat"

keywords = [
    "filesystem",
    "tree",
    "cli",
    "code-analysis",
    "file-reader"
]

categories = [
    "filesystem",
    "command-line-utilities",
    "development-tools"
]

readme = "README.md"
exclude = [
    ".github/*",
    "tests/*",
    "target/*"
]

[[bin]]
name = "snapcat"
path = "app/snapcat.rs"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
logging = ["dep:tracing"]
streaming = []

[dependencies]
ignore = "0.4.25"
globset = "0.4"
content_inspector = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rayon = { version = "1.11", optional = true }
tracing = { version = "0.1", optional = true }
clap = { version = "4.5.58", features = ["derive"] }

[dev-dependencies]
tempfile = "3.25.0"
